syntax = "proto3";
package osmosis.smartaccount.v1beta1;

import "gogoproto/gogo.proto";

option go_package = "github.com/osmosis-labs/osmosis/v24/x/smart-account/types";

// Params defines the parameters for the module.
message Params {
  // MaximumUnauthenticatedGas defines the maximum amount of gas that can be
  // used to authenticate a transaction in ante handler without having fee payer
  // authenticated.
  uint64 maximum_unauthenticated_gas = 1
      [ (gogoproto.moretags) = "yaml:\"maximum_unauthenticated_gas\"" ];

  // IsSmartAccountActive defines the state of the authenticator.
  // If set to false, the authenticator module will not be used
  // and the classic cosmos sdk authentication will be used instead.
  bool is_smart_account_active = 2
      [ (gogoproto.moretags) = "yaml:\"is_smart_account_active\"" ];

  // CircuitBreakerControllers defines list of addresses that are allowed to
  // set is_smart_account_active without going through governance.
  repeated string circuit_breaker_controllers = 3
      [ (gogoproto.moretags) = "yaml:\"circuit_breaker_controllers\"" ];
}
